css/mfa2014.css
/** STILL TO DO After 21 Feb *******/
/* Create some indication of Gallery filters so you know you've filtered it */
/* Have a nicely eased scroll down to anchors from the nav */

/* Constants ****************************

Red, aka Neon Coral, aka the new hottness:#FF4C47

*****************************************/

/** @font-face import **/
@font-face {
    font-family: 'Calibre';
    src: url('../type/cal-light.eot');
    src: url('../type/cal-light.eot?#iefix') format('embedded-opentype'),
         url('../type/cal-light.woff') format('woff'),
         url('../type/cal-light.ttf') format('truetype');
    font-weight: 100;
    font-style: normal;
    }
    
    
@font-face {
    font-family: 'Calibre';
    src: url('../type/cal-regular.eot');
    src: url('../type/cal-regular.eot?#iefix') format('embedded-opentype'),
         url('../type/cal-regular.woff') format('woff'),
         url('../type/cal-regular.ttf') format('truetype');
    font-weight: 300;
    font-style: normal;
    }

@font-face {
    font-family: 'Calibre';
    src: url('../type/cal-medium.eot');
    src: url('../type/cal-medium.eot?#iefix') format('embedded-opentype'),
         url('../type/cal-medium.woff') format('woff'),
         url('../type/cal-medium.ttf') format('truetype');
    font-weight: 500;
    font-style: normal;
    }

@font-face {
    font-family: 'Calibre';
    src: url('../type/cal-semibold.eot');
    src: url('../type/cal-semibold.eot?#iefix') format('embedded-opentype'),
         url('../type/cal-semibold.woff') format('woff'),
         url('../type/cal-semibold.ttf') format('truetype');
    font-weight: 700;
    font-style: normal;
    }

@font-face {
    font-family: 'Calibre';
    src: url('../type/cal-lightitalic.eot');
    src: url('../type/cal-lightitalic.eot?#iefix') format('embedded-opentype'),
         url('../type/cal-lightitalic.woff') format('woff'),
         url('../type/cal-lightitalic.ttf') format('truetype');
    font-weight: 100;
    font-style: italic;
    }

@font-face {
    font-family: 'Calibre';
    src: url('../type/cal-regularitalic.eot');
    src: url('../type/cal-regularitalic.eot?#iefix') format('embedded-opentype'),
         url('../type/cal-regularitalic.woff') format('woff'),
         url('../type/cal-regularitalic.ttf') format('truetype');
    font-weight: 300;
    font-style: italic;
    }

@font-face {
    font-family: 'Calibre';
    src: url('../type/cal-mediumitalic.eot');
    src: url('../type/cal-mediumitalic.eot?#iefix') format('embedded-opentype'),
         url('../type/cal-mediumitalic.woff') format('woff'),
         url('../type/cal-mediumitalic.ttf') format('truetype');
    font-weight: 500;
    font-style: italic;
    }

@font-face {
    font-family: 'Calibre';
    src: url('../type/cal-semibolditalic.eot');
    src: url('../type/cal-semibolditalic.eot?#iefix') format('embedded-opentype'),
         url('../type/cal-semibolditalic.woff') format('woff'),
         url('../type/cal-semibolditalic.ttf') format('truetype');
    font-weight: 700;
    font-style: italic;
    }

/* Global Text Styles *******************/

body {
  font-family: Calibre, "Trebuchet MS", sans-serif;
  line-height: 1.2em;
  font-weight: 500;
  font-size: 16px;
  }
  
h1, h2, h3, h4, h5, h6 {
  font-weight: 700;
  }

h1 {
  font-size: 45px;
  margin-bottom: 20px;
  }

h4 {
  font-size: 16px;
  font-weight: 900;
  margin: 0;
  padding: 0;
  text-transform: uppercase;
  margin: 15px 0 3px 0;
  }

h5 {
  color: #000;
  font-size: 16px;
  font-weight: 900;
  margin: 0 0 2px 0;
  padding: 0;
}

h1, h2, h3, h4,
aside h4,
.alert h4,
.gallery-info h4,
.thumb .block .info h4 {
  color: #FF4C47;
}

p {
  color: #000;
  font-size: 16px;
  font-weight: 300;
  margin: 0;
  padding: 0;
}

p a {
  color:inherit;
  border-bottom: 2px solid #bebebe;
  }
  
p a:hover {
  color:inherit;
  text-decoration: none;
  border-bottom: 2px solid #FF4C47;
  }
  
p a:active {
  color:#FF4C47;
  text-decoration: none;
  border-bottom: 2px solid #FF4C47;
  }
  
article p {
  margin-bottom: 15px;
  }
  
/* Image Header Styles ******************/

  header {
    position: relative;
    width: 100%;
    overflow: hidden;
    height: 240px;
    max-height: 240px;
    }
    
  header img.backgroundfill {
    display: none;
    position: relative;
    z-index: -1;
    height: 240px;
    max-height: 240px;
    width: auto;
    top: 0;
    left:0;
  }
  
  header .ontop {
    background: transparent;
    position: absolute;
    bottom: 0;
  }
  
  header .ontop img,
  header .ontop .sticky {
    position: relative;
    bottom: 10px;
    left:-160px;
  }

@media (min-width: 768px) {
  header {
    position: relative;
    width: 100%;
    overflow: hidden;
    height: 600px;
    max-height: 600px;
    }
    
  header img.backgroundfill {
    display: none;
    position: relative;
    z-index: -1;
    height: 600px;
    max-height: 600px;
    width: auto;
    top: 0;
    left:0;
  }
  
  header .ontop {
    background: transparent;
    position: absolute;
    bottom: 0;
  }
  
  header .ontop img {
    position: relative;
    bottom: 20px;
  }
  
  header .ontop .sticky {
    background: white;
    background: rgba(255,255,255,.75);
    position: fixed;
    top: -398px;
    bottom: auto;
    z-index: 999;
  }
}

/* Nav Styles ***************************/

button.btn.btn-default.dropdown-toggle.sort-studentlist {
  border: 0;
  padding: 0;
  margin: 0;
  background-color: #fff;
  border-radius:0;
  }
  
.btn-group.open .dropdown-toggle a {
  box-shadow-inset: 0;
  -moz-box-shadow-inset: 0;
  -webkit-box-shadow-inset: 0;
  box-shadow: inset 0;
  -moz-box-shadow: inset 0;
  -webkit-box-shadow: inset 0;
  color: #FF4C47; 
  }
  
.dropdown-menu { /* if in dropdown mode */
  left: 80px;
  top:-15px;
  padding: 12px 0;
  }

.dropup .dropdown-menu, .navbar-fixed-bottom .dropdown .dropdown-menu { /* when in dropup mode */
  bottom: -15px;
}

nav, button.btn.btn-default.dropdown-toggle.sort-studentlist, .dropdown-menu > li > a{
  font-weight: 700;
  font-size: 16px;
  color:#666;
  }
  
nav li, ul {
  list-style: none;
  }

nav a, .dropdown-menu > li > a {
  color:#000;
  }
  
nav a{
  border-radius: 0;
  margin: 0;
  padding: 0;
  }
  
.nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus {
  color: #FF4C47;  
  background: 0;
  }

nav a:hover, nav a:focus {
  color: #FF4C47;  
  background: 0;
  text-decoration: none;
  color: #FF4C47;  
  background: 0;
  }
  
nav a:active {
  background-color: #FF4C47;  
  color: #fff;
  text-decoration: none;
  }
  
ul.nav > li > a {
  color:#000;
  border-radius: 0;
  margin: 0;
  padding: 0;
  padding-top: 16px;
  padding-bottom: 3px;
  border-bottom: 2px solid #FF4C47;
  letter-spacing: 1px;
  }
  
.nav-pills li a:hover {
  color: #FF4C47;  
  background: 0;
  }

nav ul > li > ul {  /** First level subnav **/
  margin-left: 0;
  padding-left: 0;
  line-height: 1.5em;
  }
  
nav ul > li > ul > li > ul {  /** Second level subnav in simpler nav **/
  margin-left: 0;
  padding-left: 15px;
  margin-bottom: 10px;
  }

.nav-label {
  text-transform: uppercase;
  font-weight: 300;
  }

.input-group-btn .btn.btn-default {
  padding: 6px 5px;
  }
  
div.input-group {margin: 10px 0;}

.btn:active, 
.btn.active,
.btn-group.open .dropdown-toggle {
  -webkit-box-shadow: none;
  box-shadow: none;
}

/* Gallery Section Styles ******************/

#galleries img { width: 100%; }

#galleries ul {
  list-style: none;
  margin: 0;
  padding: 0;
  }
  
#galleries ul li p {
  margin: 0;
  padding: 0;
  }

#galleries ul {
  margin-top:18px;
  }
    
#galleries ul:first-child {
  margin-top:-15px;
  }

/* Main Content Styles ******************/

main article {
  padding: 2em 0;
}

.affix-top, .affix {
  position: static;
}

#intro p.lead {
  font-weight: bold;
  font-size: 1.5em;
  line-height: 1.1;
  color:#000;
}

@media (min-width: 768px) {
  .affix {
    position: fixed;
    top: 238px;
    width: inherit;
    max-width: 165px;
  }

  #intro p.lead {
    font-weight: bold;
    font-size: 2em;
    line-height: 1.25;
    color:#000;
  }
}

#schedule ul {padding: 0;}
#schedule ul h3 {margin: 0;}

ul.grid-display {
  list-style: none;
  margin: 0;
  padding: 0;
  margin-right: -15px;
  margin-left: -15px;
}

ul.grid-display li {
  list-style: none;
  margin-bottom: 30px;
  position: relative;
}

ul.grid-display .thumb {
  height: 277px;
}

@media (min-width: 768px) { 
  ul.grid-display .thumb {
    height: 255px;
  }
}

@media (min-width: 992px) {
  ul.grid-display .thumb {
    height: 288px;
  }
}

@media (min-width: 1200px) {
  ul.grid-display .thumb {
    height: 333px;
  }
}

ul.grid-display .thumb .block {
  background: transparent;
  font-size: 1em;
  text-transform: uppercase;
  overflow: hidden;
  position: relative;
}

ul.grid-display .thumb .block .info {
  padding: 15px 0;
  position: relative;
}

.thumb .block img {
  width: 100%;
  max-width: 100%;
  height: auto;
}

.gallery-info h4,
.gallery-info p,
ul.grid-display .thumb .block .info h4,
ul.grid-display .thumb .block .info p {
  font-size: .9em;
  margin: 0;
  padding: 0;
  font-weight: normal;
  letter-spacing: 1px;
}

#intro { padding-top: 0; }
@media (min-width: 768px) {
  #intro { padding-top: .66em; }
}

/* Footer Styles ************************/

footer {
  background-color: #dadada;
  margin-top: 4em;
  min-height: 10em;
  padding-top: 4em;
  padding-bottom: 6em;
  text-align: left;
}

footer img, footer p, footer ul {
  margin-bottom: 20px;
}

footer p, footer p a, footer li, footer li a {
  color: rgb(100,100,100);
  font-weight: 500; 
  }
  
  

/* Small devices (tablets, 768px and up) */
@media (min-width: 768px) {
  footer {
    text-align: left;
  }
]


/* Overlay related styles */
#projects-demo li, 
ul.program-peers {
  cursor: pointer;  
 }
 
.program-list li a {
   border-bottom: 2px solid #bebebe;
   cursor:pointer;
   color: #333;
   }
   
.program-list li a:hover {
  color:inherit;
  text-decoration: none;
  border-bottom: 2px solid #FF4C47;
  }
  
.program-list li a:active {
  color:#FF4C47;
  text-decoration: none;
  border-bottom: 2px solid #FF4C47;
  }
   
.program-list li {
   margin-top: 5px;
   }

.student-overlay {
  z-index: 9000;
  background: #fff;
  position: fixed;
  top:0;
  bottom:0;
  left:0;
  right:0;
  overflow: scroll;
  padding: 0;
  margin: 0;
  border: 10px solid #EEE;
}

.student-overlay img.logo {
  position: fixed;
  left: 45px;
  bottom: 45px;
}

.student-overlay .close {
  float: none;
  position: fixed;
  top:5px;
  right:7px;
  font-size: 4em;
  height: 1em;
  width: 1em;
  z-index: 9001;
}

@media (min-width: 768px) {
  .student-overlay {
    border: 15px solid #EEE;
  }
}

@media (min-width: 992px) {
  .student-overlay {
    border: 20px solid #EEE;
  }
  .student-overlay .close {
    top:7px;
    right:9px;
  }
  
}

.student-overlay .container {
  padding-top: 30px;
}
.student-overlay ul {
  padding: 0;
}

.student-overlay h2 {
  margin: 0;
}

.student-overlay h2:last-of-type {
  margin-bottom: .66em;
}

.program-peers ul li {
  cursor: pointer;
}

#slideshow {
  margin-bottom: 30px;
}

.student-overlay article { padding-bottom: 30px; }

.student-overlay .student-info ul.nav-pills {
  font-size: 1.5em;
  margin-bottom: 1em;
}

.student-overlay .student-info ul.student-links li:first-child {
  margin-right: .5em;
}

.student-overlay .student-info ul.student-nav li {
  margin-right: 1em;
  cursor: pointer;
}

